<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/filterTvFirstDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_dates"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/filterTvLastDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_dates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/filterEtFirstDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
        android:focusable="false"
        app:layout_constraintEnd_toStartOf="@id/filterStrip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterTvFirstDate"
        tools:ignore="Autofill,LabelFor,TextFields" />

    <TextView
        android:id="@+id/filterStrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:text="@string/txt_s_d"
        app:layout_constraintEnd_toStartOf="@id/filterEtLastDate"
        app:layout_constraintStart_toEndOf="@id/filterEtFirstDate"
        app:layout_constraintTop_toBottomOf="@id/filterTvFirstDate" />

    <EditText
        android:id="@+id/filterEtLastDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/filterStrip"
        app:layout_constraintTop_toBottomOf="@id/filterTvLastDate"
        tools:ignore="Autofill,LabelFor,TextFields" />

    <Button
        android:id="@+id/btnFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/background_button"
        android:text="@string/txt_filter"
        app:layout_constraintTop_toBottomOf="@id/filterEtLastDate" />
</androidx.constraintlayout.widget.ConstraintLayout>